tests/fixtures/invalid/pow_str_bool_set.py
# Cannot call pow() with Str, Bool, Set[int]
x = pow("hello", True, {1, 2, 3})
